// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PartnerForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <label>
      Nome
      <input
        name="name"
        onChange={[Function]}
        placeholder="Maria Aparecida Santos"
        type="text"
        value="Luís Felipe da Silva Chelles Spínola"
      />
    </label>
    <label>
      Nacionalidade
      <select
        name="nationality"
        onChange={[Function]}
        value="brasileira"
      >
        <option
          value="brasileira"
        >
          Brasileira
        </option>
        <option
          value="estrangeira"
        >
          Estrangeira
        </option>
      </select>
    </label>
    <label>
      Nascimento
      <InputElement
        mask="99/99/9999"
        name="birth"
        onChange={[Function]}
        placeholder="24/05/1967"
        type="text"
        value="23/09/1989"
      />
    </label>
    <label>
      Sexo
      <select
        name="gender"
        onChange={[Function]}
        value="male"
      >
        <option
          value="female"
        >
          Female
        </option>
        <option
          value="male"
        >
          Male
        </option>
      </select>
    </label>
    <label>
      e-mail
      <input
        name="email"
        onChange={[Function]}
        placeholder="seu_email@exemplo.com.br"
        type="text"
        value="lfspinola@hotmail.com"
      />
    </label>
    <label>
      Foto
      <input
        name="picture"
        onChange={[Function]}
        type="file"
      />
    </label>
    <label>
      CPF
      <InputElement
        mask="999.999.999-99"
        name="id"
        onChange={[Function]}
        placeholder="999.999.999-99"
        type="text"
        value="355.935.868-02"
      />
    </label>
    <label>
      Celular
      <InputElement
        mask="(99) 999 999 999"
        name="phone"
        onChange={[Function]}
        placeholder="(11) 999 555 111"
        type="text"
        value="(11) 992 893 976"
      />
    </label>
    <label>
      Sua história
      <input
        name="bio"
        onChange={[Function]}
        placeholder="Fale um pouco sobre você! Todos se interessam por uma boa história."
        type="text"
        value="Estudante de engenharia de software"
      />
    </label>
    <label>
      Endereço:
      <label>
        Rua
        <input
          name="addressLine1"
          onChange={[Function]}
          placeholder="Rua Francisco dos Santos Xavier"
          type="text"
          value="Rua Orides Gemente"
        />
      </label>
      <label>
        Número
        <input
          name="number"
          onChange={[Function]}
          placeholder="245"
          type="text"
          value={650}
        />
      </label>
      <label>
        Complemento
        <input
          name="addressLine2"
          onChange={[Function]}
          placeholder="Bloco 2, Apartamento 25"
          type="text"
          value=""
        />
      </label>
      <label>
        Bairro
        <input
          name="neighborhood"
          onChange={[Function]}
          placeholder="Jardim das Acácias"
          type="text"
          value="Jardim Oriental"
        />
      </label>
      <label>
        CEP
        <InputElement
          mask="99999-999"
          name="zip"
          onChange={[Function]}
          placeholder="18120-000"
          type="text"
          value="18120-000"
        />
      </label>
    </label>
    <button>
      Cadastrar
    </button>
  </form>
</div>
`;

exports[`should render PartnerForm with defaults 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <label>
      Nome
      <input
        name="name"
        onChange={[Function]}
        placeholder="Maria Aparecida Santos"
        type="text"
        value=""
      />
    </label>
    <label>
      Nacionalidade
      <select
        name="nationality"
        onChange={[Function]}
        value="brasileira"
      >
        <option
          value="brasileira"
        >
          Brasileira
        </option>
        <option
          value="estrangeira"
        >
          Estrangeira
        </option>
      </select>
    </label>
    <label>
      Nascimento
      <InputElement
        mask="99/99/9999"
        name="birth"
        onChange={[Function]}
        placeholder="24/05/1967"
        type="text"
      />
    </label>
    <label>
      Sexo
      <select
        name="gender"
        onChange={[Function]}
        value="female"
      >
        <option
          value="female"
        >
          Female
        </option>
        <option
          value="male"
        >
          Male
        </option>
      </select>
    </label>
    <label>
      e-mail
      <input
        name="email"
        onChange={[Function]}
        placeholder="seu_email@exemplo.com.br"
        type="text"
        value=""
      />
    </label>
    <label>
      Foto
      <input
        name="picture"
        onChange={[Function]}
        type="file"
      />
    </label>
    <label>
      CPF
      <InputElement
        mask="999.999.999-99"
        name="id"
        onChange={[Function]}
        placeholder="999.999.999-99"
        type="text"
        value=""
      />
    </label>
    <label>
      Celular
      <InputElement
        mask="(99) 999 999 999"
        name="phone"
        onChange={[Function]}
        placeholder="(11) 999 555 111"
        type="text"
        value=""
      />
    </label>
    <label>
      Sua história
      <input
        name="bio"
        onChange={[Function]}
        placeholder="Fale um pouco sobre você! Todos se interessam por uma boa história."
        type="text"
        value=""
      />
    </label>
    <label>
      Endereço:
      <label>
        Rua
        <input
          name="addressLine1"
          onChange={[Function]}
          placeholder="Rua Francisco dos Santos Xavier"
          type="text"
          value=""
        />
      </label>
      <label>
        Número
        <input
          name="number"
          onChange={[Function]}
          placeholder="245"
          type="text"
          value=""
        />
      </label>
      <label>
        Complemento
        <input
          name="addressLine2"
          onChange={[Function]}
          placeholder="Bloco 2, Apartamento 25"
          type="text"
          value=""
        />
      </label>
      <label>
        Bairro
        <input
          name="neighborhood"
          onChange={[Function]}
          placeholder="Jardim das Acácias"
          type="text"
          value=""
        />
      </label>
      <label>
        CEP
        <InputElement
          mask="99999-999"
          name="zip"
          onChange={[Function]}
          placeholder="18120-000"
          type="text"
          value=""
        />
      </label>
    </label>
    <button>
      Cadastrar
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <label>
      Nome
      <input
        name="name"
        onChange={[Function]}
        placeholder="Maria Aparecida Santos"
        type="text"
        value=""
      />
    </label>
    <label>
      Nacionalidade
      <select
        name="nationality"
        onChange={[Function]}
        value="brasileira"
      >
        <option
          value="brasileira"
        >
          Brasileira
        </option>
        <option
          value="estrangeira"
        >
          Estrangeira
        </option>
      </select>
    </label>
    <label>
      Nascimento
      <InputElement
        mask="99/99/9999"
        name="birth"
        onChange={[Function]}
        placeholder="24/05/1967"
        type="text"
      />
    </label>
    <label>
      Sexo
      <select
        name="gender"
        onChange={[Function]}
        value="female"
      >
        <option
          value="female"
        >
          Female
        </option>
        <option
          value="male"
        >
          Male
        </option>
      </select>
    </label>
    <label>
      e-mail
      <input
        name="email"
        onChange={[Function]}
        placeholder="seu_email@exemplo.com.br"
        type="text"
        value=""
      />
    </label>
    <label>
      Foto
      <input
        name="picture"
        onChange={[Function]}
        type="file"
      />
    </label>
    <label>
      CPF
      <InputElement
        mask="999.999.999-99"
        name="id"
        onChange={[Function]}
        placeholder="999.999.999-99"
        type="text"
        value=""
      />
    </label>
    <label>
      Celular
      <InputElement
        mask="(99) 999 999 999"
        name="phone"
        onChange={[Function]}
        placeholder="(11) 999 555 111"
        type="text"
        value=""
      />
    </label>
    <label>
      Sua história
      <input
        name="bio"
        onChange={[Function]}
        placeholder="Fale um pouco sobre você! Todos se interessam por uma boa história."
        type="text"
        value=""
      />
    </label>
    <label>
      Endereço:
      <label>
        Rua
        <input
          name="addressLine1"
          onChange={[Function]}
          placeholder="Rua Francisco dos Santos Xavier"
          type="text"
          value=""
        />
      </label>
      <label>
        Número
        <input
          name="number"
          onChange={[Function]}
          placeholder="245"
          type="text"
          value=""
        />
      </label>
      <label>
        Complemento
        <input
          name="addressLine2"
          onChange={[Function]}
          placeholder="Bloco 2, Apartamento 25"
          type="text"
          value=""
        />
      </label>
      <label>
        Bairro
        <input
          name="neighborhood"
          onChange={[Function]}
          placeholder="Jardim das Acácias"
          type="text"
          value=""
        />
      </label>
      <label>
        CEP
        <InputElement
          mask="99999-999"
          name="zip"
          onChange={[Function]}
          placeholder="18120-000"
          type="text"
          value=""
        />
      </label>
    </label>
    <button>
      Cadastrar
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <p>
    Por favor, complete todas as informações para o cadastro
  </p>
  <form
    onSubmit={[Function]}
  >
    <label>
      Nome
      <input
        name="name"
        onChange={[Function]}
        placeholder="Maria Aparecida Santos"
        type="text"
        value=""
      />
    </label>
    <label>
      Nacionalidade
      <select
        name="nationality"
        onChange={[Function]}
        value="brasileira"
      >
        <option
          value="brasileira"
        >
          Brasileira
        </option>
        <option
          value="estrangeira"
        >
          Estrangeira
        </option>
      </select>
    </label>
    <label>
      Nascimento
      <InputElement
        mask="99/99/9999"
        name="birth"
        onChange={[Function]}
        placeholder="24/05/1967"
        type="text"
      />
    </label>
    <label>
      Sexo
      <select
        name="gender"
        onChange={[Function]}
        value="female"
      >
        <option
          value="female"
        >
          Female
        </option>
        <option
          value="male"
        >
          Male
        </option>
      </select>
    </label>
    <label>
      e-mail
      <input
        name="email"
        onChange={[Function]}
        placeholder="seu_email@exemplo.com.br"
        type="text"
        value=""
      />
    </label>
    <label>
      Foto
      <input
        name="picture"
        onChange={[Function]}
        type="file"
      />
    </label>
    <label>
      CPF
      <InputElement
        mask="999.999.999-99"
        name="id"
        onChange={[Function]}
        placeholder="999.999.999-99"
        type="text"
        value=""
      />
    </label>
    <label>
      Celular
      <InputElement
        mask="(99) 999 999 999"
        name="phone"
        onChange={[Function]}
        placeholder="(11) 999 555 111"
        type="text"
        value=""
      />
    </label>
    <label>
      Sua história
      <input
        name="bio"
        onChange={[Function]}
        placeholder="Fale um pouco sobre você! Todos se interessam por uma boa história."
        type="text"
        value=""
      />
    </label>
    <label>
      Endereço:
      <label>
        Rua
        <input
          name="addressLine1"
          onChange={[Function]}
          placeholder="Rua Francisco dos Santos Xavier"
          type="text"
          value=""
        />
      </label>
      <label>
        Número
        <input
          name="number"
          onChange={[Function]}
          placeholder="245"
          type="text"
          value=""
        />
      </label>
      <label>
        Complemento
        <input
          name="addressLine2"
          onChange={[Function]}
          placeholder="Bloco 2, Apartamento 25"
          type="text"
          value=""
        />
      </label>
      <label>
        Bairro
        <input
          name="neighborhood"
          onChange={[Function]}
          placeholder="Jardim das Acácias"
          type="text"
          value=""
        />
      </label>
      <label>
        CEP
        <InputElement
          mask="99999-999"
          name="zip"
          onChange={[Function]}
          placeholder="18120-000"
          type="text"
          value=""
        />
      </label>
    </label>
    <button>
      Cadastrar
    </button>
  </form>
  <p>
    Por favor, complete todas as informações para o cadastro
  </p>
</div>
`;
